@@ -4,6 +4,9 @@ Change history
 Release Candidate 1
 ===================
 
+- Introduced IWizardPageFactory on WindsorExtension, so a Wizard controller doesn't
+  need to reference the IKernel directly
+
 - Some optimization on Redirect* methods on Controller class. Now they accept
   an IDictionary as a parameter specifier (in addition to NameValueCollection).
   
